# backend

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.sqlx/: query-0365a2384ed37be4ec40624800ba2d0cb7f00578ccbb5b222d7d3117e840e50c.json  query-04e650891b321e9c0b4d6eb5bd889899222dae5ab465f5216185a752f5a7899d.json  query-05b19f466186db10e5dfad9080357dab403b332c71efe242b80cc5c8dd6d4021.json  query-12424add3821207a71c2caa145c20eda6534a46f858f53bb4e70461f67c8b550.json  query-1439f242c936e8f8b745926584aff683e3a0922117b3fdf949d88d87970c606c.json  query-1a4cfb5d4947e003227dce46ef01b4457acf08d4b3e75c7fa424100c9b759b91.json  query-2370527d93cafbc6eb675b4d41df3b3213f53a11c8039bd06191bf3158de7855.json  query-25f65ef227826be1efb4718fa3447bc2bc30db849c993a804d746d76d4ad2701.json  query-2c28ed798f764be004552804b11fde46831e7b9f864428dfd7b258ccb463750e.json  query-31f68587194a5c02140d904402e56632529334b99b7fe2694c2dc13f5ff6e8c8.json  query-34f047e220b30ca78390cb99631649143b79945477f70f3544a808026d2f3a49.json  query-3f6be6eb12f06e00a6aa959930d53988bf9655436de1a0995e6d3eab8314b3e6.json  query-4c4fb9460852eb7e4ddfa00bb785b8d1c0396f971c4e395831beed19bc38c9c2.json  query-4ca385d13de2ed19010bbfa0f8bd7d874c57ae499f4187af666bc790f06df08c.json  query-4cfd072d38d1fcd04036f3ac577c69c2f41798783c4a5504325bc5b1701db9ac.json  query-54b7adfe6d911bdc18fdc911f7d003f8bc5e4ec3b6e405659b1e0cc4d59556f3.json  query-5612326dfe9f04ce72b18777b3b0e3589449900a95d01497372327930e4b8345.json  query-576094fa9d306e661c88310f7311a87b0c36a57c2701b3f851cdbe515b76a8a0.json  query-60c858f7abb7a78a318cf518c29bdc6582d049a5309398137e12ca0687a5bf34.json  query-6551ddc9e1f628b93d01369be2661147c736f277a20656af61a4814b0b0a2d10.json  query-6ae1dc07e754f816903b5f5ee1aeeaeec5413b4587bc68e785bdddddf58aa8dc.json  query-6b84af0a608a812d83213fcb35106b35b5805596ad182b8197e914face6aaab3.json  query-7931fbd38e4cbe8d19a5106b3cc6a6d088acff0b3ed490202cd6cc1f9968c317.json  query-79663c1d3b43ceaf9ee728e501c64b57ae2e4d6cb36ff5c65eddcda1de27342f.json  query-7c9375886bf136ceaaa9e2497792957a338c20b4c35e87aadad1ffe0d5d9aa4b.json  query-80e9308e76c3bc4dfaf8e736272d9f43e7beee248908816f3403e349daa04856.json  query-90a322b0f416b2fb852d9964dfefd5920f896b35599ddd2bd370b5b8baa3212c.json  query-9ed0cc65054382737bcf16589c25e2bdcd1a00034c4eac1d8418db2f757b5a25.json  query-a8402858d4f1e1d27afee976520485ebb4b96a5387355b823f0d0b8079729032.json  query-abd4ba4eccd2077d2da85a35e2d8624160188c6167a3953771502c96db75536f.json  query-b025bd2ef07f0b73a76fdffcd9529ae81bf883acbd3f8bf3acbd509dac8312af.json  query-b439c4b1ab31ca72b23c4481092792ca10453fffb007dbeeb48f03b2efd43bbb.json  query-c37a8e4be339f551915a2e33bcf882eca7d271d32d2dac717f46e0a5e39c7742.json  query-ce3b214ca7f7c4911efc185f103ffd4a3edccae223587d8444a9709949622e99.json  query-cff69a75072708e6a79f8b5154695a15158543d3aa471095cf0e1e2055375714.json  query-d097d8dcd362e7802845139d6ae52b61f98d2ac5b127fdcdbef8896dd6d10333.json  query-d7c6661a2e3ab44602948a9df1a284b85c29caf14703519f2921ac8f16740410.json  query-d881518fc83677b6569bb73cb5b751fd3fc285ca0ca9c3b183fe4a702c59a3b0.json  query-e55441c5fd65f199f14ead282378c0e304e4953a1a44a61a7eb5fd5812b6e457.json  (+5 more)
unitracker-backend/: Cargo.toml
unitracker-backend/src/: main.rs
unitracker-backend/src/context/: mod.rs
unitracker-backend/src/routes/: auditorium.rs  health.rs  metadata.rs  mixed.rs  mod.rs  schedule.rs  statistics.rs
unitracker-backend/src/util/: types.rs
unitracker-chsu/: Cargo.toml
unitracker-chsu/src/: error.rs  lib.rs
unitracker-chsu/src/model/: auditoriums.rs  auth.rs  buildings.rs  disciplines.rs  groups.rs  mod.rs  schedule.rs  students.rs  teachers.rs  tutors.rs
unitracker-chsu/src/request/: auditoriums.rs  auth.rs  buildings.rs  constants.rs  disciplines.rs  groups.rs  mod.rs  schedule.rs  students.rs  teachers.rs  tutors.rs  util.rs
unitracker-chsu/src/schedule/: mod.rs  model.rs  request.rs
unitracker-chsu/src/schedule/models/: mod.rs  schedule.rs  students.rs  tutors.rs
unitracker-chsu/src/utils/: response.rs
unitracker-cli/: Cargo.toml
unitracker-cli/src/: main.rs
unitracker-postgres/: Cargo.toml
unitracker-postgres/migrations/: 20240228094754_base.down.sql  20240228094754_base.up.sql
unitracker-postgres/src/: database.rs  lib.rs
unitracker-postgres/src/impls/: auditorium.rs  auditoriums.rs  building.rs  buildings.rs  chair.rs  discipline.rs  faculty.rs  group.rs  mod.rs  schedule.rs  teacher.rs  teachers.rs
unitracker-postgres/src/models/: auditorium.rs  auditoriums.rs  building.rs  buildings.rs  chair.rs  disciplines.rs  faculty.rs  group.rs  groups.rs  mod.rs  schedule.rs  teacher.rs  teachers.rs
unitracker-psql/: Cargo.toml
unitracker-psql/.sqlx/: query-238a9840df685468754757ff75fcd56f3eb8ff5cd6763b2a63260ba9579aecd3.json  query-325c2b77b3ff032737a6f4ffa5a89bf9d44f3b0ebf497d9415858efcffcf496d.json  query-34f047e220b30ca78390cb99631649143b79945477f70f3544a808026d2f3a49.json  query-4e35b83678bedb1d51b90d79210b7ca9c1aed4bc2586f847463b0fa715273cd6.json  query-515df4c1e4fd9686fe65d6111bc748029e843eb9c64b9484e6e938a33cfc7d67.json  query-7075f4c5e9b11da55d3e050c949d6be7c7e20d19f102afd4cad2e292f784969b.json  query-7b0960f989605d2c2fde04661aded1900dccef358b96732c2d73eeb2208cba0f.json  query-8135a57aac3c0bf8afd64c0f1cdc6cb9407e9a2ef7862ad3117a3b9e707585e2.json  query-9c0040605c92f1fe9c14057fbb974b240f7ef5d12689404a49c771fb20d22166.json  query-bc2ce23f71f7bdb36171482e7d7f198be6429db3d3263cf9ece2bee8c41f3187.json  query-c4744163d834a579f45054145857e27ae6006c41636916cdde0303716829aeb3.json  query-ced6209e10aca32a7b6843f7281a76cabc35e77f600c1017b19401d7b8061c11.json  query-fbd79e95ec7a9d51f77ca40efd13e49c9d4f96947bb707859bc0764232ad7c17.json
unitracker-psql/migrations/: 20250919104828_init.up.sql
unitracker-psql/src/: database.rs  lib.rs
unitracker-psql/src/impls/: auditorium.rs  building.rs  class.rs  complex.rs  discipline.rs  group.rs  mod.rs  teacher.rs
unitracker-psql/src/models/: auditorium.rs  building.rs  class.rs  discipline.rs  group.rs  mod.rs  teacher.rs
unitracker-psql/src/models/dtos/: class.rs
(+8 files in other folders)
