[workspace]
members = [ "unitracker-backend", "unitracker-chsu", "unitracker-cli", "unitracker-psql", "unitracker-server", "unitracker-types"]
resolver = "3"

[workspace.dependencies]
unitracker-backend = { path = "./unitracker-backend" }
unitracker-chsu = { path = "./unitracker-chsu" }
unitracker-cli = { path = "./unitracker-cli" }
unitracker-psql = { path = "./unitracker-psql"}
unitracker-server = { path = "./unitracker-server"}
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"]}
reqwest = { version = "0.12.5", features = ["json"] }
chrono = { version = "0.4.34", features = ["serde"] }
dotenv = "0.15.0"
eyre = "0.6"
futures = "0.3"
serde = {version = "1.0.*", features = ["derive"]}
serde_json = "1.0.113"
