[package]
name = "unitracker-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = { version = "0.8.4", features = ["json", "macros", "tracing"] }
unitracker-psql.workspace = true
itertools = "0.14.0"
apply = "0.3.0"
unitracker-types = { version = "0.1.0", path = "../unitracker-types" }
unitracker-server = { path = "../unitracker-server" }
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http = { version = "0.6.6", features = ["trace"] }
tower = { version = "0.5.2", features = ["tracing"] }
