[package]
name = "unitracker_chsu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.*"
axum = "0.7.*"
http-body-util = "0.1.0"
tokio = "1.36.0"
serde_derive = "1.0.196"
url = "2.5.0"
time = { version = "0.3.34", features = [] }
pin-project-lite = "0.2.13"
pin-project = { version = "1.1.4", features = [] }
reqwest = "0.11.24"
serde_json = "1.0.113"
base64 = "0.21.7"
chrono = "0.4.33"
thiserror = "1.0.*"