[package]
name = "unitracker-chsu"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-body-util = "0.1.0"
serde_derive = "1.0.196"
url = "2.5.0"
pin-project-lite = "0.2.13"
time = "0.3.34"
time-macros = "0.2.17"
pin-project = { version = "1.1.4", features = [] }
chrono.workspace = true
dotenv = "0.15.0"
thiserror = "1.0.*"
hyper = { version = "1.4.1", features = ["full"] }
tokio.workspace = true
reqwest.workspace = true
futures.workspace = true

serde.workspace = true
serde_json.workspace = true
constcat = "0.6.1"
