[package]
name = "unitracker-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono.workspace = true
clap = { version = "4.5.48", features = ["derive"] }
comfy-table = "7.2.1"
eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unitracker-chsu.workspace = true
unitracker-psql.workspace = true
