[package]
name = "unitracker-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "chrono", "postgres"]}
futures = "0.3.30"
tokio = "1.36.0"
chrono = "0.4.34"
eyre = "0.6.12"
unitracker_chsu = { path = "../unitracker-chsu" }
clokwerk = "0.4.0"
